--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -91,7 +91,7 @@
 
 /* ### 기본 스타일 커스터마이징 끝 ### */
 /* 회원가입 약관 */
-.register {margin:0 auto}
+.register {margin:0 auto; max-width : 600px; min-width : 360px;}
 .register:after {display:block;visibility:hidden;clear:both;content:""}
 .register .btn_confirm .btn_submit,
 .register .btn_confirm .btn_close {float:left;height:50px !important;width:49.5%;font-weight:bold;font-size:1.083em}
@@ -128,8 +128,9 @@
 /* 회원가입 입력 */
 #register_form {background:#fff;margin-bottom:20px}
 #register_form h2 {padding:20px;border-bottom:1px solid #dde7e9}
-.register_form_inner {background:#f7f7f7;border:1px solid #dde7e9;border-radius:3px}
-.register_form_inner ul {padding:20px}
+.register_form_inner {background:#fff;border:1px solid #dde7e9;border-radius:3px}
+.register_form_inner ul {padding:30px;}
+.register_form_inner ul li{margin-bottom:30px;}
 .register_form_inner label {display:block;margin-bottom:10px;line-height:24px}
 
 #fregisterform #msg_certify {margin:5px 0 0;padding:5px;border:1px solid #dbecff;background:#eaf4ff;text-align:center}
@@ -227,11 +228,11 @@
 	50% {opacity:0}
 	}
 
-#memo_list h1#win_title {padding:10px 10px 10px 20px}
-#memo_list .memo_datetime {font-size:0.92em;color:#888d92}
-#memo_list .memo_del {position:absolute;right:15px;top:15px;padding:10px;color:#c7c9cb;font-size:1.4em}
-#memo_list .memo_cnt {margin-top:5px;font-weight:normal;display:inline-block;font-size:1.2em}
-#memo_list .pg_wrap {margin-top:10px;width:100%;float:inherit;text-align:center}
+#memo_list h1#win_title {padding:10px 10px 10px 20px;}
+#memo_list .memo_datetime {font-size:0.92em;color:#888d92;}
+#memo_list .memo_del {position:absolute;right:15px;top:15px;padding:10px;color:#c7c9cb;font-size:1.4em;}
+#memo_list .memo_cnt {margin-top:5px;font-weight:normal;display:inline-block;font-size:1.2em;}
+#memo_list .pg_wrap {margin-top:10px;width:100%;float:inherit;text-align:center;}
 
 #memo_view_contents {margin-bottom:20px;border-top:1px solid #ececec;border-bottom:1px solid #ececec}
 #memo_view_contents h2 {position:absolute;font-size:0;line-height:0;overflow:hidden}
@@ -249,7 +250,7 @@
 .memo_from li.memo_view_date {display:block;color:#555;line-height:24px}
 .memo_from li.memo_op_btn {position:absolute}
 .memo_from li.list_btn {right:53px;}
-.memo_from li.del_btn {right:15px;padding}
+.memo_from li.del_btn {right:15px;}
 .memo_from:after {display:block;visibility:hidden;clear:both;content:""}
 
 .memo_btn {width:100%}
@@ -320,7 +321,7 @@
 #mb_confirm h1 {margin:60px 0 30px;font-size:2em}
 #mb_confirm p {padding:0 20px 40px;border-bottom:1px solid #e9e9e9;font-size:1.083em;line-height:1.4em;color:#656565}
 #mb_confirm p strong {display:block;color:#3ca1ff;font-size:1.167em;margin:0 0 5px}
-#mb_confirm fieldset {;padding:50px;text-align:left}
+#mb_confirm fieldset {padding:50px;text-align:left}
 #mb_confirm fieldset .frm_input {background-color:#fff !important}
 #mb_confirm label {letter-spacing:-0.1em}
 #mb_confirm_id {display:block;margin:5px 0 10px;font-weight:bold}
