--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -131,6 +131,13 @@
 #sns_register .login-sns,
 #sns_register h2 {border:0 !important}
 
+/* 회원가입 메뉴 */
+.register_menu li{ float : left; width : 50%; padding : 20px 0px; font-size : 1.7em; font-weight : bold;  box-sizing : border-box; border-bottom : 1px solid #d9d9d9; text-align : center; cursor : pointer;  }
+
+.register_menu li.over, .register_menu li:hover {border-bottom : 1px solid #ff3a8f; color : #ff3a8f;}
+.register_menu li:first-child{ border-right : 0px; }
+
+
 /* 회원가입 입력 */
 #register_form {background:#fff;margin-bottom:20px}
 #register_form h2 {padding:20px;border-bottom:1px solid #dde7e9}
@@ -138,6 +145,7 @@
 .register_form_inner ul {padding:30px;}
 .register_form_inner ul li{margin-bottom:30px;}
 .register_form_inner label {display:block;margin-bottom:10px;line-height:24px}
+
 
 
 #fregisterform #msg_certify {margin:5px 0 0;padding:5px;border:1px solid #dbecff;background:#eaf4ff;text-align:center}
