--- a/public_html/theme/basic/css/default.css
+++ b/public_html/theme/basic/css/default.css
@@ -81,9 +81,54 @@ border:1px solid #558ab7 !important;
 
 #logo {padding:20px 0 20px; text-align : center; display : inline-block; }
 #logo img { height : 80px;}
-
+/* hd 메뉴 */
 #hd_wrapper .menu_btn{ position : absolute; left : 20px; top : 30px;  padding-left : 10px; }
 #hd_wrapper .menu_btn a {font-size : 3em; font-weight : 100; color : #000; }
+
+.menu_panel { 
+    transition: all 1s ease-in-out;-webkit-transition: all 0.5s ease-in-out;-moz-transition: all 0.5s ease-in-out;-o-transition: all 0.5s ease-in-out;-ms-transition: all 0.5s ease-in-out;position: fixed;z-index: 9999;top: 0;height: 100%; width: 75%; max-width : 350px;  background-color: #fff; border-right : 1px solid #ccc; 
+}
+
+.menu_panel ul {
+    width:100%;
+    list-style-type: none;
+    z-index: 1;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    text-align: left;
+}
+  
+.menu_panel ul li,
+.menu_panel ul a {
+    display: inline-block;
+    width: 100%;
+    font-size : 1.1em;
+    padding : 5px 0;
+    padding-left : 10px; 
+    font-weight: 200;
+    font-weight : bold;
+    box-sizing : border-box;
+}
+
+.menu_panel .mo-menu-title {
+    padding : 40px 0px 20px 20px;; 
+    text-align : left; 
+}
+
+.panel-overlay { 
+    display : none; position: fixed;top: 0;z-index: 9998; width: 100%; height: 100%;display: none;background-color: rgba(0, 0, 0, 0.6);cursor: pointer;
+}
+
+
+.menu_panel{
+    left: -350px;
+  }
+
+  /* 패널이 활성화 되었을때 */
+  .menu_panel.active {
+    left: 0;
+  }
 
 
 .hd_sch_wr {float:left;padding:30px 0;;width:445px;margin-left:65px}
