--- a/public_html/theme/basic/css/default.css
+++ b/public_html/theme/basic/css/default.css
@@ -171,6 +171,19 @@ border:1px solid #558ab7 !important;
 .menu_panel .gnb_member_menu li.over a{
     color : #fff; 
 }
+
+.menu_panel  .gnb_menu_list_title{ 
+    display : inline-block;
+    line-height : 2em;
+    font-size : 1.4em;
+}
+
+.menu_panel .menu-label img{
+    height: 27px;
+    vertical-align: text-bottom;
+
+}
+
 .hd_sch_wr {float:left;padding:30px 0;;width:445px;margin-left:65px}
 #hd_sch h3 {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #hd_sch {border-radius:30px;overflow:hidden}
