--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -149,8 +149,8 @@
 .mbskin .search_field .mb_list_submit_btn{ position : absolute; top : 30px; right : 40px; border : 0px; background : none; }
 .mbskin .search_field .mb_list_submit_btn i{color : #999;}
 .mbskin .member_list_table { width : 100%; margin-top : 20px; margin-bottom : 50px; font-size : 1.2em;}
-.mbskin .member_list_table th{ padding : 10px 0px ; border-bottom  : 3px solid #f6f6f6 ; border-top : 3px solid #f6f6f6}
-.mbskin .member_list_table td{ padding : 10px 0px ; border-bottom  : 1px solid #f6f6f6 ; }
+.mbskin .member_list_table th{ padding : 10px 0px ; border-bottom  : 3px solid #f6f6f6 ; border-top : 3px solid #f6f6f6; }
+.mbskin .member_list_table td{ padding : 10px 0px ; border-bottom  : 1px solid #f6f6f6 ; text-align : center;}
 
 .mbskin .member_code_box { font-size : 1.4em; text-align : center; margin-top : 30px; }
 .mbskin .member_code_box .member_reco_code_url_box{ padding : 15px; background : #f6f6f6; border-radius : 25px; cursor : pointer; text-align : center;}
@@ -160,9 +160,7 @@
 
 .mbskin .check_circle_over{background : #ff3a8f; }
 
-.mbskin .member_reco_view_box{
-    text-align : center; margin-top : 50px; 
-}
+.mbskin .member_reco_view_box{ width : 90%; text-align : center; margin-top : 50px;  }
 
 .mbskin .member_reco_view_box ul li{font-size : 1.8em;}
 .mbskin .member_reco_view_box li.member_view_profile_cont{ margin-top : 20px;}
@@ -171,10 +169,14 @@
 .mbskin .member_view_table td {padding : 10px 20px; text-align : left;  border-bottom : 1px solid #d9d9d9; }
 .mbskin .member_reco_view_box .view_title{margin-top : 30px; font-size : 1.8em; text-align : left;}
 
-.mbskin .member_reco_view_box .mb_signature_pad:after{ display:block;visibility:hidden;clear:both;content:"" }
+.mbskin .member_reco_view_box #mb_signature_pad{ margin-bottom : 20px; width : 100%; height : 300px; border : 1px solid #d9d9d9;}
+.mbskin .member_reco_view_box #mb_signature_pad:after{ display:block;visibility:hidden;clear:both;content:"" }
 .mbskin .member_reco_view_box .signature_reset_btn{ background-color : #fff; border : 1px solid #ff3a8f; color : #ff3a8f; font-size : 1.2em; width : 48%; padding : 10px 0 ; border-radius : 5px; float : left;  }
 .mbskin .member_reco_view_box .signature_save_btn{ margin-left : 4%; background-color : #ff3a8f;  border : 1px solid #ff3a8f;  color : #fff; font-size : 1.2em; width : 48%; padding : 10px 0 ; border-radius : 5px; float : left;
 }
+
+.mbskin .point_send_form_box{ margin-top : 20px; }
+.mbskin .point_send_form_box table th{font-size : 1.3em; padding : 20px 0; text-align : left; }
 
 /* ### 기본 스타일 커스터마이징 끝 ### */
 /* 회원가입 약관 */
