--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -91,7 +91,7 @@
 
 
 .mb_title{position : relative; padding : 20px 0; border-bottom : 1px solid #d9d9d9; font-size : 2.5em; text-align : center;}
-.mb_title .history_back{position : absolute; left : 0px; top: 25px; cursor : pointer;  }
+.mb_title .history_back{position : absolute; left : 0px; top: 20px; padding-left : 10px; cursor : pointer;  }
 
 
 .mbskin input[type=checkbox] {
