--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -160,7 +160,7 @@
 
 .mbskin .check_circle_over{background : #ff3a8f; }
 
-.mbskin .member_reco_view_box{ width : 90%; margin : 0 auto; margin-top : 50px;  }
+.mbskin .member_reco_view_box{ width : 90%; text-align : center; margin : 0px auto; margin-top : 50px;  }
 
 .mbskin .member_reco_view_box ul li{font-size : 1.8em;}
 .mbskin .member_reco_view_box li.member_view_profile_cont{ margin-top : 20px;}
