--- a/public_html/theme/basic/skin/member/basic/style.css
+++ b/public_html/theme/basic/skin/member/basic/style.css
@@ -134,7 +134,6 @@
 .mbskin .file_upload_list li{
     float : left;     width : 30%;  height : 73px;  margin-right : 3%; margin-top: 20px;   text-align : center;    border : 1px solid #999; color : #999; font-size : 4em; cursor : pointer;  overflow : hidden;
 }
-
 .mbskin textarea {display:block;padding:20px;width:100%;height:150px;background:#fff;border:1px solid #999;line-height:1.6em}
 .mbskin .frm_input_90 { width : 87.3%; height : 50px; }
 .mbskin .frm_input_75 { width : 70%; }
@@ -186,6 +185,14 @@
 .mbskin .point_send_form_box{ width : 90%; margin : 0 auto; margin-top : 20px; }
 .mbskin .point_send_form_box table th{font-size : 1.3em; padding : 20px 0; text-align : left; }
 
+.mbskin .store_img_box{
+    margin-top: 20px
+}
+.mbskin .store_img_box:after{display:block;visibility:hidden;clear:both;content:""}
+.mbskin .store_img_box li{
+    float : left; width : 45%; margin-right : 3%; margin-top: 10px;
+}
+.mbskin .store_img_box li img{ width : 100%;border-radius : 20px; }
 /* ### 기본 스타일 커스터마이징 끝 ### */
 /* 회원가입 약관 */
 .register {margin:0 auto; width : 100%; max-width : 600px;}
